# pp_sudoku

./: .gitignore  CMakeLists.txt  readme.md
compare_algorithem/: sudoku_bf.cpp
compare_algorithm/: sudoku_bf.cpp  sudoku_dlx.cpp
data/: hard20.txt  sudoku.top5k  top95.txt
include/: DataBase.hpp  Dfs.hpp  Sudoku.hpp  commen.h
src/: batsolver.cpp  main.cpp  single_loop_solver.cpp  single_solver.cpp  sudoku_pp.cpp  test.cpp
